--- a/Boletin Virtual/Boletin Virtual 2025/Alumno/MenuAlumnos.Master
+++ b/Boletin Virtual/Boletin Virtual 2025/Alumno/MenuAlumnos.Master
@@ -18,7 +18,7 @@
         <nav runat="server" id="navBar">
             <div class="logo">
                 <i class="bx bx-menu menu-icon"></i>
-                <span class="logo-name">Instituto46</span>
+                <span class="logo-name">Instituto46  </span>
             </div>
              <div class="user-info">
             <asp:Label ID="lblUserWelcome" runat="server"></asp:Label>
@@ -32,16 +32,21 @@
                     <ul class="lists">
                         <li class="list"><a href="MisDatosAlumno.aspx" class="nav-link"><i class="bx bx-home-alt icon"></i><span class="link">Mis Datos</span></a></li>
                         <li class="list"><a href="boletin.aspx" class="nav-link"><i class="bx bx-bar-chart-alt-2 icon"></i><span class="link">boletin</span></a></li>
-                        <li class="list"><a href="#" class="nav-link"><i class="bx bx-bell icon"></i><span class="link">boletin</span></a></li>
+                         <li class="list"><a href="SimularFecha.aspx" class="nav-link"><i class="bx bx-bar-chart-alt-2 icon"></i><span class="link">SimularFecha</span></a></li>
+                           <li class="list"><a href="Inscripciones.aspx" class="nav-link"><i class="bx bx-bar-chart-alt-2 icon"></i><span class="link">Inscripciones</span></a></li>
                       <!--  <li class="list"><a href="#" class="nav-link"><i class="bx bx-message-rounded icon"></i><span class="link">mensajes</span></a></li>
                         <li class="list"><a href="#" class="nav-link"><i class="bx bx-pie-chart-alt-2 icon"></i><span class="link">Analytics</span></a></li>
                         <li class="list"><a href="#" class="nav-link"><i class="bx bx-heart icon"></i><span class="link">Likes</span></a></li>
                         <li class="list"><a href="#" class="nav-link"><i class="bx bx-folder-open icon"></i><span class="link">Files</span></a></li>  -->
                     </ul>
-                    <div class="bottom-cotent">
-                        <li class="list"><a href="#" class="nav-link"><i class="bx bx-cog icon"></i><span class="link">Settings</span></a></li>
-                        <li class="list"><a href="#" class="nav-link"><i class="bx bx-log-out icon"></i><span class="link">Logout</span></a></li>
-                    </div>
+                  <div class="bottom-content">
+    <li class="list">
+        <asp:LinkButton ID="btnLogout" runat="server" CssClass="nav-link" OnClick="btnLogout_Click" CausesValidation="false">
+            <i class="bx bx-log-out icon"></i>
+            <span class="link">Logout</span>
+        </asp:LinkButton>
+    </li>
+</div>
                 </div>
             </div>
         </nav>
