--- a/Boletin Virtual/Boletin Virtual 2025/moderador/MenuModerador.Master
+++ b/Boletin Virtual/Boletin Virtual 2025/moderador/MenuModerador.Master
@@ -20,7 +20,7 @@
         <nav id="navBar">
             <div class="logo">
                 <i class="bx bx-menu menu-icon"></i>
-                <span class="logo-name">Instituto46</span>
+                <span class="logo-name">Instituto46  </span>
             </div>
             <div class="user-info">
                 <asp:Label ID="lblUserWelcome" runat="server"></asp:Label>
@@ -35,16 +35,20 @@
                         <li class="list"><a href="AgregarAlumno.aspx" class="nav-link"><i class="bx bx-home-alt icon"></i><span class="link">Agregar Alumno</span></a></li>
                         <li class="list"><a href="AgregarProfesor.aspx" class="nav-link"><i class="bx bx-bar-chart-alt-2 icon"></i><span class="link">Agregar Profesor </span></a></li>
                         <li class="list"><a href="AsignarProfesorMateria.aspx" class="nav-link"><i class="bx bx-bell icon"></i><span class="link">Asignar Profesor Materia</span></a></li>
-                        <li class="list"><a href="AsignarProfesorCursada.aspx" class="nav-link"><i class="bx bx-bell icon"></i><span class="link">Asignar Profesor Cursada</span></a></li>
-                    <!--      <li class="list"><a href="#" class="nav-link"><i class="bx bx-message-rounded icon"></i><span class="link">Mensajes</span></a></li>
+                        <li class="list"><a href="SubirArchivos.aspx" class="nav-link"><i class="bx bx-message-rounded icon"></i><span class="link">SbuirArchvios</span></a></li>
                    <!--       <li class="list"><a href="#" class="nav-link"><i class="bx bx-pie-chart-alt-2 icon"></i><span class="link">Analytics</span></a></li>
                     <!--      <li class="list"><a href="#" class="nav-link"><i class="bx bx-heart icon"></i><span class="link">Likes</span></a></li>
                    <!--      <li class="list"><a href="#" class="nav-link"><i class="bx bx-folder-open icon"></i><span class="link">Files</span></a></li> --->
                     </ul>
-                    <div class="bottom-content">
-                        <li class="list"><a href="#" class="nav-link"><i class="bx bx-cog icon"></i><span class="link">Settings</span></a></li>
-                        <li class="list"><a href="#" class="nav-link"><i class="bx bx-log-out icon"></i><span class="link">Logout</span></a></li>
-                    </div>
+
+<div class="bottom-content">
+    <li class="list">
+        <asp:LinkButton ID="btnLogout" runat="server" CssClass="nav-link" OnClick="btnLogout_Click" CausesValidation="false">
+            <i class="bx bx-log-out icon"></i>
+            <span class="link">Logout</span>
+        </asp:LinkButton>
+    </li>
+</div>
                 </div>
             </div>
         </nav>
